...
  String toString() {
    return 'All different: ${this.domain.asIntIterable()}';
  }

  @override
  String s_display() {
    return "allDiff";
  }
}

class Eliminator extends DomainFilterer {
  late Sudoku sd;
  late List<SudokuBuffer> conditions;
...
