...
    final double h = (MediaQuery.of(ctx).size.height - 1.0) / n;
    final double size = (isPortrait ? w : h) - 8.0;
    final double sz = size;

    return Scaffold(
      appBar: AppBar(
        title: new Text('Selecting'),
        elevation: 0.0,
        actions: this._makeToolbar(ctx),
      ),
      body: CustomScrollView(
        primary: true,
        slivers: <Widget>[
...
                    children: <Widget>[
                      (
                        this.interact is! MultiselectionInteraction ?
                        RaisedButton(
                          padding: EdgeInsets.all(16.0),
                          elevation: 16.0,
                          child: Text('Clear'),
                          onPressed: () {
                            this._handleOnPress(ctx, 0);
                          },
                        )
                        : RaisedButton(
                          padding: EdgeInsets.all(16.0),
...
