...
    });
    this.assist.updateCurrentCondition();
    assert(this.check());
    callback_f();
  }

  Sudoku(int n, AssetBundle a, callback_f, {double? generatedDifficulty}) {
    this.n = n;
    this.ne2 = n * n;
    this.ne4 = ne2 * ne2;
    this.ne6 = ne4 * ne2;
    this.changes = <SudokuChange>[];
    this.assist = SudokuAssist(this);
...
